@@ -280,7 +280,7 @@ void requestUnlink(request)
     request->link_count--;
     if (request->link_count) 
 	return;
-    safe_free(request->hierarchy_host);
+    safe_free(request->hierarchy.host);
     put_free_request_t(request);
 }
 
