@@ -64,8 +64,7 @@ struct _request {
     int port;
     char urlpath[MAX_URL + 1];
     int link_count;		/* free when zero */
-    hier_code hierarchy_code;
-    char *hierarchy_host;
+    struct _hierarchyLogData hierarchy;
 };
 
 extern char *url_convert_hex _PARAMS((char *org_url, int allocate));
